# src/api/models/mint-token.ts
@@ -1,30 +1,0 @@
-/* tslint:disable */
-/* eslint-disable */
-/**
- * Immutable X API
- * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
- *
- * The version of the OpenAPI document: 3.0
- * Contact: support@immutable.com
- *
- * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
- * https://openapi-generator.tech
- * Do not edit the class manually.
- */
-
-
-// May contain unused imports in some cases
-// @ts-ignore
-import { Token } from './token';
-// May contain unused imports in some cases
-// @ts-ignore
-import { TokenDataOAIGen } from './token-data-oaigen';
-
-/**
- * @type MintToken
- * Details of the asset which has been minted
- * @export
- */
-export type MintToken = Token;
-
-
